fix WP icon alignment after merge

--- a/client/components/videos-ui/modal-header-bar.scss
+++ b/client/components/videos-ui/modal-header-bar.scss
@@ -2,7 +2,6 @@
 @import '@wordpress/base-styles/mixins';
 
 .videos-ui .videos-ui__modal-header-bar {
-	padding: 12px 20px;
 	span {
 		cursor: pointer;
 		display: none;
