--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -238,10 +238,6 @@
 		}
 	}
 
-	.videos-ui__header-bar {
-		padding-top: 20px;
-	}
-
 	.videos-ui__footer-bar {
 		padding: 0 20px;
 		background-color: #101517;
